--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+Assets.xcassets/
+
 ## macOS Finder metadata
 .DS_Store
 **/.DS_Store
