--- a/VoiceMantra/VoiceMantraRelease.entitlements
+++ b/VoiceMantra/VoiceMantraRelease.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.marcodeb.VoiceMantra.MantraWidget</string>
+		<string>group.com.marcodeb.MantraFlow.SharedData</string>
 	</array>
 </dict>
 </plist>
